--- a/index.html
+++ b/index.html
@@ -1,18 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Spotify Clone</title>
+    <link rel="stylesheet" href="styles/style.css" />
     <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Premium Discover Help Download Music for everyone. Spotify is now free on mobile, tablet and computer. Listen to the
-    right music, wherever you are. What’s on Spotify? Millions of Songs There are millions of songs on Spotify HD Music
-    Listen to music as if you were listening live Stream Everywhere Stream music on your smartphone, tablet or computer
-    It’s as yeezy as Kanye West. Search Know what you want to listen to? Just search and hit play. Browse Check out the
-    latest charts, brand new releases and great playlists for right now. Discover Enjoy new music every Monday with your
-    own personal playlist. Or sit back and enjoy Radio.
-  </body>
+</head>
+
+<body>
+    <header>
+        <div>
+            <div>
+                <img class="spotify-logo" src="images/spotify-logo.png" />
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#"> Premium </a></li>
+                    <li><a href="#"> Discover </a></li>
+                    <li><a href="#"> Help </a></li>
+                    <li><a href="#"> Download </a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <section class="music-everyone">
+        <div class="background-text">
+            <h1>Music for everyone.</h1>
+            <p>Spotify is now free on mobile, tablet and computer. </p>
+            <p>Listen to the right music, wherever you are.</p>
+        </div>
+    </section>
+    <section class = "what-spotify">
+        <h2>What’s on Spotify?</h2>
+        <div>
+          <article>
+              <img class="logo" src="images/music-icon.png" />
+              <h3>Millions of Songs</h3>
+              <p>There are millions of songs on Spotify</p>
+          </article>
+          <article>
+              <img class="logo" src="images/high-quality-icon.png" />
+              <h3>HD Music</h3>
+              <p>Listen to music as if you were listening live</p>
+          </article>
+          <article>
+              <img class="logo" src="images/devices-icon.png" />
+              <h3>Stream Everywhere</h3>
+              <p>Stream music on your smartphone, tablet or computer</p>
+          </article>
+      </div>
+    </section>
+    <section>
+        It’s as yeezy as Kanye West.
+
+        Search
+        Know what you want to listen to? Just search and hit play.
+
+        Browse
+        Check out the latest charts, brand new releases and great playlists for right now.
+
+        Discover
+        Enjoy new music every Monday with yourown personal playlist. Or sit back and enjoy Radio.
+    </section>
+</body>
+
 </html>
