--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div>
-            <div>
+            <div class="bounce-animation">
                 <img class="spotify-logo" src="images/spotify-logo.png" />
             </div>
             <nav>
@@ -34,37 +34,52 @@
             <p>Listen to the right music, wherever you are.</p>
         </div>
     </section>
-    <section class = "what-spotify">
-        <h2>What’s on Spotify?</h2>
+    <section class="what-spotify">
+        <h2> <u class="underline"> What’s on Spotify? </u></h2>
         <div>
-          <article>
-              <img class="logo" src="images/music-icon.png" />
-              <h3>Millions of Songs</h3>
-              <p>There are millions of songs on Spotify</p>
-          </article>
-          <article>
-              <img class="logo" src="images/high-quality-icon.png" />
-              <h3>HD Music</h3>
-              <p>Listen to music as if you were listening live</p>
-          </article>
-          <article>
-              <img class="logo" src="images/devices-icon.png" />
-              <h3>Stream Everywhere</h3>
-              <p>Stream music on your smartphone, tablet or computer</p>
-          </article>
-      </div>
+            <article>
+                <img class="logo" src="images/music-icon.png" />
+                <h3>Millions of Songs</h3>
+                <p>There are millions of songs on Spotify</p>
+            </article>
+            <article>
+                <img class="logo" src="images/high-quality-icon.png" />
+                <h3>HD Music</h3>
+                <p>Listen to music as if you were listening live</p>
+            </article>
+            <article>
+                <img class="logo" src="images/devices-icon.png" />
+                <h3>Stream Everywhere</h3>
+                <p>Stream music on your smartphone, tablet or computer</p>
+            </article>
+        </div>
     </section>
-    <section>
-        It’s as yeezy as Kanye West.
+    <section class="kanye">
+        <h2> <u class="underline-white"> It’s as yeezy as Kanye West. </u></h2>
+        <div class="main">
+            <div class="text">
+                <h4>Search</h4>
+                <p> Know what you want to listen to? Just search and hit play.</p>
 
-        Search
-        Know what you want to listen to? Just search and hit play.
+                <h4> Browse </h4>
+                <p>Check out the latest charts, brand new releases and great playlists for right now. </p>
 
-        Browse
-        Check out the latest charts, brand new releases and great playlists for right now.
+                <h4> Discover </h4>
 
-        Discover
-        Enjoy new music every Monday with yourown personal playlist. Or sit back and enjoy Radio.
+                <p>Enjoy new music every Monday with yourown personal playlist. Or sit back and enjoy Radio. </p>
+            </div>
+            <div>
+                <img class="logo-normal" src="images/spotify-icon-white.png" />
+
+            </div>
+            <div>
+                <img class="spotify-page" src="images/spotify-app.jpg" />
+
+            </div>
+
+
+
+        </div>
     </section>
 </body>
 
