--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
     <header>
         <div>
-            <div class="bounce-animation">
-                <img class="spotify-logo" src="images/spotify-logo.png" />
-            </div>
             <nav>
+                <div class="bounce-animation">
+                    <img class="spotify-logo" src="images/spotify-logo.png" />
+                </div>
                 <ul>
                     <li><a href="#"> Premium </a></li>
                     <li><a href="#"> Discover </a></li>
@@ -26,61 +26,62 @@
             </nav>
         </div>
     </header>
-
-    <section class="music-everyone">
-        <div class="background-text">
-            <h1>Music for everyone.</h1>
-            <p>Spotify is now free on mobile, tablet and computer. </p>
-            <p>Listen to the right music, wherever you are.</p>
-        </div>
-    </section>
-    <section class="what-spotify">
-        <h2> <u class="underline"> What’s on Spotify? </u></h2>
-        <div>
-            <article>
-                <img class="logo" src="images/music-icon.png" />
-                <h3>Millions of Songs</h3>
-                <p>There are millions of songs on Spotify</p>
-            </article>
-            <article>
-                <img class="logo" src="images/high-quality-icon.png" />
-                <h3>HD Music</h3>
-                <p>Listen to music as if you were listening live</p>
-            </article>
-            <article>
-                <img class="logo" src="images/devices-icon.png" />
-                <h3>Stream Everywhere</h3>
-                <p>Stream music on your smartphone, tablet or computer</p>
-            </article>
-        </div>
-    </section>
-    <section class="kanye">
-        <h2> <u class="underline-white"> It’s as yeezy as Kanye West. </u></h2>
-        <div class="main">
-            <div class="text">
-                <h4>Search</h4>
-                <p> Know what you want to listen to? Just search and hit play.</p>
-
-                <h4> Browse </h4>
-                <p>Check out the latest charts, brand new releases and great playlists for right now. </p>
-
-                <h4> Discover </h4>
-
-                <p>Enjoy new music every Monday with yourown personal playlist. Or sit back and enjoy Radio. </p>
+    <div class="content">
+        <section class="music-everyone">
+            <div class="background-text">
+                <h1>Music for everyone.</h1>
+                <p>Spotify is now free on mobile, tablet and computer. </p>
+                <p>Listen to the right music, wherever you are.</p>
             </div>
+        </section>
+        <section class="what-spotify">
+            <h2> <u class="underline"> What’s on Spotify? </u></h2>
             <div>
-                <img class="logo-normal" src="images/spotify-icon-white.png" />
+                <article>
+                    <img class="logo" src="images/music-icon.png" />
+                    <h3>Millions of Songs</h3>
+                    <p>There are millions of songs on Spotify</p>
+                </article>
+                <article>
+                    <img class="logo" src="images/high-quality-icon.png" />
+                    <h3>HD Music</h3>
+                    <p>Listen to music as if you were listening live</p>
+                </article>
+                <article>
+                    <img class="logo" src="images/devices-icon.png" />
+                    <h3>Stream Everywhere</h3>
+                    <p>Stream music on your smartphone, tablet or computer</p>
+                </article>
+            </div>
+        </section>
+        <section class="kanye">
+            <h2> <u class="underline-white"> It’s as yeezy as Kanye West. </u></h2>
+            <div class="main">
+                <div class="text">
+                    <h4>Search</h4>
+                    <p> Know what you want to listen to? Just search and hit play.</p>
+
+                    <h4> Browse </h4>
+                    <p>Check out the latest charts, brand new releases and great playlists for right now. </p>
+
+                    <h4> Discover </h4>
+
+                    <p>Enjoy new music every Monday with yourown personal playlist. Or sit back and enjoy Radio. </p>
+                </div>
+                <div>
+                    <img class="logo-normal" src="images/spotify-icon-white.png" />
+
+                </div>
+                <div>
+                    <img class="spotify-page" src="images/spotify-app.jpg" />
+
+                </div>
+
+
 
             </div>
-            <div>
-                <img class="spotify-page" src="images/spotify-app.jpg" />
-
-            </div>
-
-
-
-        </div>
-    </section>
+        </section>
+    </div>
 </body>
 
 </html>
